@@ -1,5 +1,10 @@
 2005-10-13  Rodney Dawes  <dobey@novell.com>
 
+	* legacy-icon-mapping.xml: Add links so that logout, search, and help
+	show up properly in gnome. Patch from Steven Garrity
+
+2005-10-13  Rodney Dawes  <dobey@novell.com>
+
 	* legacy-icon-mapping.xml: Add edit-paste and utilities-system-monitor
 	to the list of icons to map older names to
 
